[package]
name = "shortner"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
shuttle-axum = "0.34.0"
shuttle-runtime = "0.34.0"
tokio = "1.28.2"
tracing = "0.1.40"
shuttle-secrets = "0.34.1"
rbs = { version = "4.5"}
rbatis = { version = "4.5"}
rbdc-pg = { version="4.5" }
serde = "1.0.193"
serde_json = "1.0"
